FS-2990: Add decorator for devolved authorities
