# api/routes/__init__.py
@@ -1,4 +1,5 @@
 from .assessment_routes import all_assessments_for_fund_round_id
+from .assessment_routes import assessment_metadata_for_application_id
 from .assessment_routes import assessment_stats_for_fund_round_id
 from .assessment_routes import get_application_json
 from .assessment_routes import get_assessor_task_list_state
@@ -18,6 +19,7 @@ from .score_routes import post_score_for_application_sub_criteria
 
 __all__ = [
     "all_assessments_for_fund_round_id",
+    "assessment_metadata_for_application_id",
     "get_score_for_application_sub_criteria",
     "post_score_for_application_sub_criteria",
     "get_assessor_task_list_state",
